--- a/src/DevIO.Infra/DevIO.Infra.csproj
+++ b/src/DevIO.Infra/DevIO.Infra.csproj
@@ -52,6 +52,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\Context\MeuDbContext.cs" />
+    <Compile Include="Data\Mappings\EnderecoConfig.cs" />
+    <Compile Include="Data\Mappings\FornecedorConfig.cs" />
+    <Compile Include="Data\Mappings\ProdutoConfig.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
