--- a/src/DevIO.Infra/DevIO.Infra.csproj
+++ b/src/DevIO.Infra/DevIO.Infra.csproj
@@ -55,6 +55,9 @@
     <Compile Include="Data\Mappings\EnderecoConfig.cs" />
     <Compile Include="Data\Mappings\FornecedorConfig.cs" />
     <Compile Include="Data\Mappings\ProdutoConfig.cs" />
+    <Compile Include="Data\Repository\EnderecoRepository.cs" />
+    <Compile Include="Data\Repository\FornecedorRepository.cs" />
+    <Compile Include="Data\Repository\ProdutoRepository.cs" />
     <Compile Include="Data\Repository\Repository.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
