--- a/src/DevIO.Infra/DevIO.Infra.csproj
+++ b/src/DevIO.Infra/DevIO.Infra.csproj
@@ -59,6 +59,10 @@
     <Compile Include="Data\Repository\FornecedorRepository.cs" />
     <Compile Include="Data\Repository\ProdutoRepository.cs" />
     <Compile Include="Data\Repository\Repository.cs" />
+    <Compile Include="Migrations\202207060150518_update-database.cs" />
+    <Compile Include="Migrations\202207060150518_update-database.designer.cs">
+      <DependentUpon>202207060150518_update-database.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -72,7 +76,11 @@
       <Name>DevIO.Business</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202207060150518_update-database.resx">
+      <DependentUpon>202207060150518_update-database.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
